--- a/Intro to SQL.ipynb
+++ b/Intro to SQL.ipynb
@@ -18,26 +18,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Write a SQL query that returns the first 20 majors that either:\n",
+    "#Write a SQL query that returns the first 20 majors that either:\n",
     "\n",
-    "have a Median salary greater than or equal to 10,000, or\n",
-    "have less than or equal to 1,000 Unemployed people\n",
-    "Only include the following columns in the results and in this order:\n",
+    "#have a Median salary greater than or equal to 10,000, or\n",
+    "#have less than or equal to 1,000 Unemployed people\n",
+    "#Only include the following columns in the results and in this order:\n",
     "\n",
-    "Major\n",
-    "Median\n",
-    "Unemployed\n",
+    "#Major\n",
+    "#Median\n",
+    "#Unemployed\n",
     "\n",
-    "SELECT Major, Median, Unemployed FROM recent_grads\n",
-    "WHERE Median >= 10000 OR unemployed <= 1000 limit 20\n",
+    "'''\n",
+    "SELECT Major, Median, Unemployed \n",
+    "FROM recent_grads\n",
+    "WHERE Median >= 10000 \n",
+    "OR unemployed <= 1000 Limit 20;\n",
+    "'''\n",
     "\n",
+    "#Using multiple functions\n",
     "\n",
-    "using multiple functions\n",
-    "\n",
+    "'''\n",
     "SELECT Major, Major_category, ShareWomen, Unemployment_rate FROM recent_grads\n",
     "WHERE (Major_category = 'Engineering') \n",
     "AND (ShareWomen > 0.5 OR Unemployment_rate < 0.051)\n",
-    "ORDER BY ShareWomen DESC\n"
+    "ORDER BY ShareWomen DESC;\n",
+    "'''"
    ]
   },
   {
@@ -54,14 +59,16 @@
    "outputs": [],
    "source": [
     "# Alias for visualizaiton\n",
-    "Write a query that returns, in the following order:\n",
+    "#Write a query that returns, in the following order:\n",
     "\n",
-    "the number of rows as Number of Students\n",
-    "the maximum value of Unemployment_rate as Highest Unemployment Rate\n",
+    "#the number of rows as Number of Students\n",
+    "#the maximum value of Unemployment_rate as Highest Unemployment Rate\n",
     "\n",
+    "'''\n",
     "SELECT COUNT(*) 'Number of Students', MAX(Unemployment_rate) 'Highest Unemployment Rate'\n",
     "FROM recent_grads\n",
-    "WHERE Major_category = 'Engineering'\n"
+    "WHERE Major_category = 'Engineering';\n",
+    "'''"
    ]
   },
   {
@@ -70,10 +77,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "SELECT COUNT(DISTINCT(Major)) 'unique_majors',\n",
     "COUNT(DISTINCT(Major_category)) 'unique_major_categories',\n",
     "COUNT(DISTINCT(Major_code)) 'unique_major_codes'\n",
-    "FROM recent_grads"
+    "FROM recent_grads;\n",
+    "'''"
    ]
   },
   {
@@ -83,10 +92,11 @@
    "outputs": [],
    "source": [
     "# Arthemetic Operation\n",
-    "\n",
+    "'''\n",
     "SELECT Major, Major_category, (P75th - P25th) 'quartile_spread'\n",
     "FROM recent_grads\n",
-    "ORDER BY quartile_spread LIMIT 20"
+    "ORDER BY quartile_spread LIMIT 20;\n",
+    "'''"
    ]
   },
   {
@@ -104,23 +114,43 @@
    "source": [
     "# Find all of the major categories where the share of graduates with low-wage jobs is greater than .1.\n",
     "\n",
+    "'''\n",
     "SELECT Major_category, ROUND(AVG(College_jobs) / AVG(Total), 3) 'share_degree_jobs'\n",
     "FROM recent_grads\n",
     "GROUP BY Major_category\n",
-    "HAVING share_degree_jobs < 0.3 ;"
+    "HAVING share_degree_jobs < 0.3 ;\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-23T11:48:31.120710Z",
+     "start_time": "2018-05-23T11:48:31.107178Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nSELECTS  Major_category, CAST(SUM(Women) as FLOAT) / CAST (SUM(Total) as FLOAT) 'SW'\\nFROM recent_grads\\nGROUP BY Major_category\\nORDER BY SW;\\n\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using CAST for calculations\n",
-    "SELECTS  Major_category, CAST(SUM(Women) as FLOAT) / CAST (SUM(Total) as FLOAT) 'SW'\n",
+    "'''\n",
+    "SELECT  Major_category, CAST(SUM(Women) as FLOAT) / CAST (SUM(Total) as FLOAT) 'SW'\n",
     "FROM recent_grads\n",
     "GROUP BY Major_category\n",
-    "ORDER BY SW;\n"
+    "ORDER BY SW;\n",
+    "'''"
    ]
   },
   {
@@ -139,8 +169,11 @@
     "# Dynamic Filters to calculate proportions\n",
     "# Now that we have a subquery that calculates the average ratio (of Sample_size to Total), we can return the rows that exceed this average.\n",
     "\n",
-    "select Major, Major_category, cast(Sample_size as float)/cast(Total as float) ratio from recent_grads\n",
-    "where ratio > (select AVG(cast(Sample_size as float)/cast(Total as float)) avg_ratio from recent_grads)\n"
+    "'''\n",
+    "SELECT Major, Major_category, cast(Sample_size as float)/cast(Total as float) ratio \n",
+    "FROM recent_grads\n",
+    "WHERE ratio > \n",
+    "(Select AVG(cast(Sample_size as float)/cast(Total as float)) avg_ratio From recent_grads)\n"
    ]
   },
   {
@@ -152,11 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-23T09:32:46.231002Z",
-     "start_time": "2018-05-23T09:32:46.224016Z"
+     "end_time": "2018-05-23T11:49:14.772097Z",
+     "start_time": "2018-05-23T11:49:14.766125Z"
     }
    },
    "outputs": [
